[project]
name = "dummy-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Alina Li",email = "alinali87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "timestamp-converter (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.2"


[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"



[tool.poetry.dependencies]
timestamp-converter = {source = "test-pypi"}
